# gonito-backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Application.hs  CHANGELOG.md  Dockerfile  Foundation.hs  Model.hs  PersistEvaluationScheme.hs  PersistMetric.hs  PersistSHA1.hs  PersistTeamActionType.hs  README.md  Settings.hs  add-variants.sql  add-versions.sql  build.sh  docker-compose-simple.yml  docker-compose.yml  fix-out.sql  gonito.cabal  nginx.conf  pack.sh  sample.env  stack.yaml
Data/: Diff.hs  SubmissionConditions.hs
Gonito/: ExtractMetadata.hs
Handler/: AccountReset.hs  AchievementUtils.hs  Achievements.hs  Annotations.hs  Announcements.hs  Common.hs  Course.hs  CreateChallenge.hs  Dashboard.hs  DeleteSubmission.hs  Discussion.hs  EditSubmission.hs  EditSubmissionV1.hs  Evaluate.hs  ExtraPoints.hs  Extract.hs  Graph.hs  Home.hs  JWT.hs  ListChallenges.hs  MakePublic.hs  Poleval.hs  Presentation.hs  Query.hs  Runner.hs  Score.hs  Shared.hs  ShowChallenge.hs  SubmissionAbility.hs  SubmissionPreview.hs  SubmissionView.hs  Swagger.hs  Tables.hs  TagUtils.hs  Tags.hs  Team.hs  ViewPublicKey.hs  Wirus.hs  Wirus_admin.hs  YourAccount.hs
Web/: Announcements.hs
app/: devel.hs  main-bin.hs  main.hs  upgrade-to-0-2.hs
config/: keter.yml  models  routes  settings.yml  test-settings.yml
helpers/: create-sample-challenges.sh
helpers/gitolite/: fetch_keys.sh  get_keys.pl  get_keys.sh  mark_as_public.sh  notes.md  post-update
messages/: en.msg
misc/: commits.drawio  gonito-platform.drawio
sql-scripts/: add-indexes.sql  check-before-convert-to-2.sql  convert-to-2.sql
static/: test-gonito-as-backend.html
static/css/: bootstrap.css  extra.css  impress-demo.css
static/js/: datatables-extended.js  extra.js  years-stats-draw.js  years-stats.json
static/swagger-ui/: index.html
templates/: achievements.hamlet  achievements.julius  annotation-task-results.hamlet  annotation-task-results.julius  annotation-task.hamlet  annotation-task.lucius  auth.hamlet  challenge-all-submissions.hamlet  challenge-all-submissions.julius  challenge-discussion.hamlet  challenge-how-to.hamlet  challenge-submission.hamlet  challenge.hamlet  challenge.julius  challenge.lucius  course-summary.hamlet  course.hamlet  courses-i-teach.hamlet  create-challenge.hamlet  create-reset-link.hamlet  creating-challenge.hamlet  dashboard.hamlet  dashboard.julius  default-layout-wrapper.hamlet  default-layout.hamlet  edit-achievement.hamlet  edit-achievement.julius  edit-indicator.hamlet  edit-submission.hamlet  edit-submission.julius  external-repo.hamlet  extra-points.hamlet  gonito-in-class.hamlet  homepage.hamlet  homepage.lucius  indicator-status.hamlet  invitation-link-created.hamlet  list-annotations.hamlet  list-challenges-core.hamlet  list-challenges.hamlet  (+37 more)
test/: TestImport.hs
test/Data/: SubmissionConditionsSpec.hs
test/Gonito/: ExtractMetadataSpec.hs
test/Handler/: HomeSpec.hs
