name:              gonito
version:           1.0.0
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://gonito.net
license:           AGPL-3
license-file:      agpl-3.0.txt
author:            Filip Graliński
maintainer:        filipg@amu.edu.pl


Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     PersistEvaluationScheme
                     PersistMetric
                     PersistSHA1
                     Settings
                     Settings.StaticFiles
                     Handler.Common
                     Handler.CreateChallenge
                     Handler.Discussion
                     Handler.Graph
                     Handler.Home
                     Handler.ListChallenges
                     Handler.MakePublic
                     Handler.Shared
                     Handler.ShowChallenge
                     Handler.Extract
                     Handler.Query
                     Handler.Tables
                     Handler.YourAccount
                     Handler.AccountReset
                     Handler.Presentation
                     Handler.Tags
                     Handler.EditSubmission
                     Handler.SubmissionView
                     Handler.Annotations
                     Handler.Achievements
                     Handler.TagUtils
                     Handler.Score
                     Handler.AchievementUtils
                     Handler.ExtraPoints
                     Handler.Runner
                     Handler.Dashboard
                     Handler.Evaluate
                     Data.SubmissionConditions
                     Gonito.ExtractMetadata
                     Data.Diff
                     Handler.Swagger

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                RankNTypes
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.6        && < 1.7
                 , yesod-core                    >= 1.6        && < 1.7
                 , yesod-auth                    >= 1.6        && < 1.7
                 , yesod-static                  >= 1.6        && < 1.7
                 , yesod-form                    >= 1.6        && < 1.7
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , case-insensitive
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.12
                 , persistent-postgresql         >= 2.1.1      && < 2.9
                 , persistent-template           >= 2.0        && < 2.6
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.4
                 , directory                     >= 1.1        && < 1.4
                 , warp                          >= 3.0        && < 3.3
                 , data-default
                 , aeson                         >= 0.6        && < 1.4
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.5
                 , wai-logger                    >= 2.2        && < 2.4
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , stm
                 , network-uri
                 , lifted-base
                 , process
                 , random
                 , pandoc >= 2
                 , pandoc-types
                 , filemanip
                 , cryptohash
                 , markdown
                 , geval >= 1.37.2 && < 1.39
                 , filepath
                 , yesod-table
                 , regex-tdfa
                 , optparse-applicative
                 , blaze-markup
                 , blaze-html
                 , conduit-extra
                 , resourcet
                 , yesod-newsfeed
                 , yesod-auth-hashdb
                 , pwstore-fast
                 , nonce
                 , esqueleto
                 , extra
                 , attoparsec
                 , random-strings
                 , wai
                 , megaparsec
                 , Glob
                 , req
                 , wai-cors
                 , word8
                 , jose-jwt
                 , scientific
                 , swagger2
                 , lens
                 , insert-ordered-containers

executable         gonito
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, gonito, wai-handler-fastcgi

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

executable         gonito-bin
    if flag(library-only)
        Buildable: False

    main-is:           main-bin.hs
    hs-source-dirs:    app
    build-depends:     base, gonito

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

executable         upgrade-to-0-2
    if flag(library-only)
        Buildable: False

    main-is:           upgrade-to-0-2.hs
    hs-source-dirs:    app
    build-depends:     base
                       , gonito
                       , esqueleto
                       , text
                       , monad-logger
                       , persistent
                       , persistent-postgresql
                       , resourcet
                       , bytestring
                       , persistent-template
                       , mtl
                       , utf8-string

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , gonito
                 , yesod-test >= 1.6 && < 1.7
                 , yesod-core
                 , yesod-auth                    >= 1.6        && < 1.7
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
                 , wai-handler-fastcgi
                 , wai
                 , containers
                 , unordered-containers
