name:              gonito
version:           3.24.7
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://gonito.net
license:           GPL-3
license-file:      gpl-3.0.txt
author:            Filip Graliński
maintainer:        filipg@amu.edu.pl


Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     PersistEvaluationScheme
                     PersistMetric
                     PersistSHA1
                     PersistTeamActionType
                     Settings
                     Settings.StaticFiles
                     Handler.Common
                     Handler.CreateChallenge
                     Handler.Discussion
                     Handler.Graph
                     Handler.Home
                     Handler.ListChallenges
                     Handler.MakePublic
                     Handler.Shared
                     Handler.ShowChallenge
                     Handler.Extract
                     Handler.Query
                     Handler.Tables
                     Handler.YourAccount
                     Handler.AccountReset
                     Handler.Presentation
                     Handler.Tags
                     Handler.EditSubmission
                     Handler.EditSubmissionV1
                     Handler.SubmissionView
                     Handler.Annotations
                     Handler.Achievements
                     Handler.TagUtils
                     Handler.Score
                     Handler.AchievementUtils
                     Handler.ExtraPoints
                     Handler.Runner
                     Handler.Dashboard
                     Handler.Evaluate
                     Handler.SubmissionAbility
                     Handler.DeleteSubmission
                     Handler.Wirus
                     Handler.ViewPublicKey
                     Data.SubmissionConditions
                     Gonito.ExtractMetadata
                     Data.Diff
                     Handler.Swagger
                     Handler.JWT
                     Handler.Team
                     Handler.Announcements
                     Web.Announcements
                     Handler.Course

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                RankNTypes
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: base                          >= 4          && < 5
                 , wai
                 , wai-extra
                 , yesod                         >= 1.6
                 , yesod-core                    >= 1.6
                 , yesod-auth                    >= 1.6
                 , yesod-static                  >= 1.6
                 , yesod-form                    >= 1.6
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9
                 , case-insensitive
                 , text                          >= 0.11
                 , persistent
                 , persistent-postgresql
                 , template-haskell
                 , shakespeare                   >= 2.0
                 , monad-control                 >= 0.3
                 , yaml                          >= 0.8
                 , http-conduit                  >= 2.1
                 , directory                     >= 1.1
                 , warp                          >= 3.0
                 , data-default
                 , aeson                         >= 0.6
                 , conduit                       >= 1.0
                 , monad-logger                  >= 0.3
                 , fast-logger                   >= 2.2
                 , wai-logger                    >= 2.2
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , stm
                 , network-uri
                 , lifted-base
                 , process
                 , random
                 , pandoc >= 2
                 , pandoc-types
                 , filemanip
                 , cryptohash
                 , markdown
                 , geval >= 1.42.2
                 , filepath
                 , yesod-table
                 , regex-tdfa
                 , optparse-applicative
                 , blaze-markup
                 , blaze-html
                 , conduit-extra
                 , resourcet
                 , yesod-newsfeed
                 , yesod-auth-hashdb
                 , pwstore-fast
                 , nonce
                 , esqueleto
                 , extra
                 , attoparsec
                 , random-strings
                 , megaparsec
                 , Glob
                 , req
                 , wai-cors
                 , word8
                 , jose-jwt
                 , scientific
                 , swagger2
                 , lens
                 , insert-ordered-containers
                 , yesod-websockets
                 , MissingH
                 , modern-uri
                 , data-default-class
                 , parser-combinators
                 , http-client-tls
                 , pureMD5

executable         gonito
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, gonito, wai-extra

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

executable         gonito-bin
    if flag(library-only)
        Buildable: False

    main-is:           main-bin.hs
    hs-source-dirs:    app
    build-depends:     base, gonito, wai-extra

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , gonito
                 , yesod-test >= 1.6
                 , yesod-core
                 , yesod-auth                    >= 1.6
                 , yesod
                 , persistent
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
                 , wai
                 , wai-extra
                 , containers
                 , unordered-containers
                 , yesod-websockets
